fix: footer social images align-items: center

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -42,6 +42,7 @@ footer {
         .socials {
           display: flex;
           gap: 24px;
+          align-items: center;
         }
       }
     }
